# nsengine

./: .editorconfig  .gitmodules  CMakeLists.txt  build.bat  build.sh  combine_deps.bat  config.bat  post_build.bat  tasks.org  update.bat
core/materials/: default.mat
core/meshes/: dirlightbounds.msh  skydome.msh  spotlightbounds.msh  terrain.msh
core/shaders/: dirshadowmap.shr  earlyz.shr  gbufferdefault.shr  gbufferxtf.shr  gbufferxtfrender.shr  lightstencil.shr  pointshadowmap.shr  renderparticle.fsh  renderparticle.shr  spotlight.shr  spotshadowmap.shr  transparencydefault.shr  xfbearlyz.shr  xfbpointshadowmap.shr
doc/: comp_template.cpp  notes.org  sys_template.cpp  tasks.org
ext/hashlib/: CMakeLists.txt  build.bat
ext/hashlib/lib/x64/: hashlibs.lib  hashprojs.lib  hashprojsd.lib
ext/hashlib/lib/x86/: hashlibsd.lib  hashprojs.lib  hashprojsd.lib
ext/hashlib/src/: digest.cpp  md5.cpp  murmurhash.cpp  sha1.cpp  sha256.cpp
ext/soil-1.16.0/: .dir-locals.el  CMakeLists.txt  build.bat
import/: DAEcobblestone.dae  DAEdbframe.dae  DAEdbup.dae  DAEice.dae  DAEleaftree.dae  DAEpinetree3.dae  DAEsand.dae  DAEwood.dae  LOStest.dae  direction.dae  direction2.dae  direction5.dae  direction7.dae  skydome.dae  spotlight.dae  spotlight2.dae  spotlight3.dae
include/: nsanimcomp.h  nsanimmanager.h  nsanimset.h  nsanimsystem.h  nsbuildsystem.h  nscamcomp.h  nscamerasystem.h  nscomponent.h  nsengine.h  nsentity.h  nsentitymanager.h  nsevent.h  nseventdispatcher.h  nseventhandler.h  nsfactory.h  nsfileos.h  nsframebuffer.h  nsglfw.h  nsglobal.h  nsinputcomp.h  nsinputmanager.h  nsinputmap.h  nsinputmapmanager.h  nsinputsystem.h  nslightcomp.h  nsmat3.h  nsmat4.h  nsmaterial.h  nsmath.h  nsmatmanager.h  nsmesh.h  nsmeshmanager.h  nsmovementsystem.h  nsoccupycomp.h  nsparticlecomp.h  nsparticlesystem.h  nsplugin.h  nspluginmanager.h  nspupper.h  nsquat.h  (+22 more)
include/IL/: il.h  ilu.h  ilut.h
include/hash/: crc32.h
include/myGL/: glew.h
include/nsengine/: nsanim_comp.h  nsanim_manager.h  nsanim_set.h  nsanim_system.h  nsanimcomp.h  nsanimset.h  nsbuffer_object.h  nsbufferobject.h  nsbuild_system.h  nsbuildsystem.h  nscallback.h  nscam_comp.h  nscamcomp.h  nscamera_system.h  nscamerasystem.h  nscomponent.h  nscube_grid.h  nsdebug.h  nsengine.h  nsentity.h  nsentity_manager.h  nsentitymanager.h  nsenum_hash.h  nsevent.h  nsevent_dispatcher.h  nsevent_handler.h  nseventdispatcher.h  nseventhandler.h  nsfactory.h  nsfb_object.h  nsfile_os.h  nsfileos.h  nsfont_manager.h  nsframebuffer.h  nsgbuf_object.h  nsgl_context.h  nsgl_object.h  nsglfw.h  nsglobal.h  nsglobject.h  (+93 more)
lib/x64/: libglfw.so.3.1  libglfwd.so.3.1
src/: SOIL.c  crc32.cpp  image_helper.c  nsanim_comp.cpp  nsanim_manager.cpp  nsanim_set.cpp  nsanim_system.cpp  nsanimcomp.cpp  nsanimmanager.cpp  nsanimset.cpp  nsanimsystem.cpp  nsbuffer_object.cpp  nsbufferobject.cpp  nsbuild_system.cpp  nsbuildsystem.cpp  nscam_comp.cpp  nscamcomp.cpp  nscamera_system.cpp  nscamerasystem.cpp  nscomponent.cpp  nscube_grid.cpp  nsdebug.cpp  nsengine.cpp  nsentity.cpp  nsentity_manager.cpp  nsentitymanager.cpp  nsevent_dispatcher.cpp  nsevent_handler.cpp  nseventdispatcher.cpp  nseventhandler.cpp  nsfactory.cpp  nsfb_object.cpp  nsfile_os.cpp  nsfileos.cpp  nsfont.cpp  nsfont_manager.cpp  nsframebuffer.cpp  nsgbuf_object.cpp  nsgl_context.cpp  nsgl_object.cpp  (+85 more)
src/asset/: nsanim_manager.cpp  nsanim_set.cpp  nsasset.cpp  nsasset_manager.cpp  nsaudio_clip.cpp  nsaudio_manager.cpp  nsaudio_source.cpp  nsentity.cpp  nsentity_manager.cpp  nsfont.cpp  nsfont_manager.cpp  nsinput_map.cpp  nsinput_map_manager.cpp  nsmap_area.cpp  nsmap_area_manager.cpp  nsmat_manager.cpp  nsmaterial.cpp  nsmesh.cpp  nsmesh_manager.cpp  nsplugin.cpp  nsplugin_manager.cpp  nsprefab.cpp  nsprefab_manager.cpp  nsscene.cpp  nsscene_manager.cpp  nsshader.cpp  nsshader_manager.cpp  nstex_manager.cpp  nstexture.cpp  nsui_canvas.cpp  nsui_canvas_manager.cpp
src/component/: nsanim_comp.cpp  nsaudio_source_comp.cpp  (+20 more)
src/math/: CMakeLists.txt  nsmath.cpp
tests/: CMakeLists.txt  animation_test.cpp  audio_test.cpp  buildsystemtest.cpp  fogtest.cpp  inputtest.cpp  most_basic_test.cpp  particle_test.cpp  prefab_testing.cpp  resource_copy_test.cpp  resource_load_test.cpp  skyboxtest.cpp  window_test.cpp
tests/import/: AX-1.dae  DAEalphatest.dae  DAEbrick.dae  DAEdbdown.dae  DAEdoor.dae  DAEdoorframe.dae  DAElava.dae  DAEpinetree.dae  DAEsnow.dae  DAEstone.dae  DAEswamp.dae  DAEwater.dae  GrassTile.dae  Gunslinger (2).dae  anims.txt  cosn.fnt  direction3.dae  direction4.dae  pointlight.dae  spot.3ds  spot.dae
tests/plugins/: testplug.bbp
tests/resources/core/input/: enginedefault.nsi
tests/resources/core/materials/: default.mat
tests/resources/core/meshes/: pointlightbounds.msh  skydome.msh
tests/resources/core/meshes/bin_backup/: fulltile.msh  halftile.msh  spotlightbounds.msh  terrain.msh
tests/resources/core/shaders/: directionlight.shr  dirshadowmap.shr  fragment_sort.shr  gbufferdefault.shr  gbufferdefault_translucent.shr  gbufferdefault_wireframe.shr  lightstencil.shr  pointlight.shr  pointshadowmap.shr  render_ui.shr  renderparticle.shr  selectionsolid.shr  shadow_2d.shr  shadow_cube.shr  skybox.shr  spotlight.shr  spotshadowmap.shr  ui_render_border.shr  ui_render_text.shr  xfbdirshadowmap.shr  xfbparticle.shr  xfbspotshadowmap.shr
tests/resources/core/shaders/opengl4_0/: directionlight.shr  lightstencil.shr  pointlight.shr  spotlight.shr  spotshadowmap.shr
tests/resources/core/shaders/opengl4_4/: directionlight.shr  fragment_sort.shr  gbufferdefault.shr  gbufferdefault_translucent.shr  gbufferdefault_wireframe.shr  pointlight.shr  selectionsolid.shr  spotlight.shr  ui_render_text.shr
tests/resources/testplug/entities/: dirlight.ent  grasstile.ent  scenecam.ent  simple_tile_brush.ent  tree.ent
tests/resources/testplug/input/: basic_input.nsi  bb_toolkit.nsi
tests/resources/testplug/maps/: mainscene.map
tests/resources/testplug/materials/: DAEpinetree_0.mat  grasstile.mat  skydome.mat
tests/resources/testplug/meshes/: DAEpinetree.msh
(+298 files in other folders)
