link_libraries(nsengine)

if (UNIX)
  message("Linking UNIX libraries")
  link_directories(${PROJECT_SOURCE_DIR}/lib/${PLATFORM})
  link_libraries(debug assimpd)
  link_libraries(optimized assimp)
  link_libraries(debug glfwd)
  link_libraries(optimized glfw)
elseif (WIN32)
  link_directories(${PROJECT_SOURCE_DIR}/lib/${PLATFORM}/${CMAKE_BUILD_TYPE})
  link_libraries(debug assimp-vc140-mtd)
  link_libraries(optimized assimp-vc140-mt)
  link_libraries(debug glfw3ddll)
  link_libraries(optimized glfw3dll)
  link_libraries(DbgHelp)
endif()

link_libraries(debug freetyped)
link_libraries(optimized freetype)
link_libraries(openal)
link_libraries(sndfile)

# link with opengl (no debug version)
find_package(OpenGL REQUIRED)
if(NOT OPENGL_FOUND)
message(ERROR "Error: OpenGL not found on your system - please make sure you have it downloaded.")
endif(NOT OPENGL_FOUND)
link_libraries(${OPENGL_LIBRARIES})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/${PLATFORM})

add_executable(most_basic_test most_basic_test.cpp)
set_target_properties(most_basic_test PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})

add_executable(window_test window_test.cpp)
set_target_properties(window_test PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})

add_executable(audio_test audio_test.cpp)
set_target_properties(audio_test PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
